--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
                     <div class="profile-photo">
                         <img src="./Imagens/Foto Perfil.jpg" alt="foto de perfil">
                     </div>
-                    <a href="#" class="instagram-login">Continue como gatão</a>
+                    <a href="https://www.instagram.com/f3ll7p3.r0s4/" class="instagram-login">Continue como gatão</a>
                     <a href="#" class="instagram-logout">Remover conta</a>
                 </div>
                 <div class="group">
