Entrar com o facebook

--- a/Index.html
+++ b/Index.html
@@ -19,6 +19,8 @@
                     </div>
                     <a href="https://www.instagram.com/f3ll7p3.r0s4/" class="instagram-login">Continue como gatão</a>
                     <a href="#" class="instagram-logout">Remover conta</a>
+                    ou
+                    <a href="#" class="facebook-login">Entre com o facebook</a>
                 </div>
                 <div class="group">
                     <p class="not-account">Não é gatão?</p>
