--- a/Index.html
+++ b/Index.html
@@ -35,8 +35,8 @@
                 <div class="get-the-app">
                     <p class="get-app">Baixe o aplicativo</p>
                     <div class="download">
-                        <a href="#" class="app-download"></a>
-                        <a href="#" class="app-download"></a>
+                        <a href="https://itunes.apple.com/app/instagram/id389801252?pt=428156&ct=igweb.loginPage.badge&mt=8&vt=lo" class="app-download"></a>
+                        <a href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DloginPage%26ig_mid%3D2C62A690-2907-4248-9C48-A53FD373EE25%26utm_content%3Dlo%26utm_medium%3Dbadge" class="app-download"></a>
                     </div>
                 </div>
             </div>
