--- a/Index.html
+++ b/Index.html
@@ -17,11 +17,9 @@
                     <div class="profile-photo">
                         <img src="./Imagens/Foto Perfil.jpg" alt="foto de perfil">
                     </div>
-                    <a href="https://www.instagram.com/f3ll7p3.r0s4/" class="instagram-login">Continue como gatão</a>
+                    <a href="https://www.instagram.com/felipe.xrosa/" class="instagram-login">Continue como gatão</a>
                     <a href="#" class="instagram-logout">Remover conta</a>
-                    
-                    ou
-
+                    <p class="texto">ou</p>
                     <a href="#" class="facebook-login">Entre com o facebook</a>
                 </div>
                 <div class="group">
@@ -29,7 +27,7 @@
                     <p class="not-account">
                         <span class="link-blue">Alternar contas</span>
                         ou
-                        <span class="link-blue">Inscreva-se</span>
+                        <span class="link-blue">Cadastre-se</span>
                     </p>
                 </div>
                 <div class="get-the-app">
